tests/baselines/reference/switchStatementsWithMultipleDefaults.errors.txt
tests/cases/compiler/switchStatementsWithMultipleDefaults.ts(9,5): error TS1113: A 'default' clause cannot appear more than once in a 'switch' statement.
tests/cases/compiler/switchStatementsWithMultipleDefaults.ts(10,5): error TS1113: A 'default' clause cannot appear more than once in a 'switch' statement.
tests/cases/compiler/switchStatementsWithMultipleDefaults.ts(28,22): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/compiler/switchStatementsWithMultipleDefaults.ts (3 errors) ====
    
    var x = 10;
    
    switch (x) {
        case 1:
        case 2:
        default:    // No issues.
            break;
        default:    // Error; second 'default' clause.
        ~~~~~~~~
!!! error TS1113: A 'default' clause cannot appear more than once in a 'switch' statement.
        default:    // Error; third 'default' clause.
        ~~~~~~~~
!!! error TS1113: A 'default' clause cannot appear more than once in a 'switch' statement.
        case 3:
            x *= x;
    }
    
    switch (x) {
        default:    // No issues.
            break;
        case 100:
            switch (x * x) {
                default:    // No issues.
                default:    // Error; second 'default' clause.
                    break;
                case 10000:
                    x /= x;
                default:    // Error, third 'default' clause
                def\u0061ult: // Error, fourth 'default' clause.
                // Errors on fifth-seventh
                default: return;
                         ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
                default: default:
            }
    }